Fixed line breaks not showing up in comments

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -375,6 +375,9 @@ td {
      width: 400px;
      overflow: hidden;
 }
+td p {
+     color: black;
+}
 
 /******************************************
 ADD STUDY FORM STYLES
